--- a/deno.json
+++ b/deno.json
@@ -47,7 +47,7 @@
     "component": "deno eval 'import \"deco/scripts/component.ts\"'",
     "release": "deno eval 'import \"deco/scripts/release.ts\"'",
     "update": "deno run -Ar https://deco.cx/update",
-    "check": "deno fmt && deno lint && deno check dev.ts main.ts",
+    "check": "deno fmt && deno lint",
     "install": "deno eval 'import \"deco/scripts/apps/install.ts\"'",
     "uninstall": "deno eval 'import \"deco/scripts/apps/uninstall.ts\"'",
     "bundle": "deno run -A jsr:@deco/deco/scripts/bundle site",
@@ -68,7 +68,10 @@
     ".deco"
   ],
   "lint": {
-    "rules": { "exclude": ["no-window"], "tags": ["fresh", "recommended"] }
+    "rules": {
+      "exclude": ["no-window", "react-no-danger", "react-rules-of-hooks"],
+      "tags": ["fresh", "recommended"]
+    }
   },
   "nodeModulesDir": true,
   "compilerOptions": { "jsx": "react-jsx", "jsxImportSource": "preact" },
