--- a/deno.json
+++ b/deno.json
@@ -7,7 +7,7 @@
     "@core/asyncutil": "jsr:@core/asyncutil@^1.0.2",
     "@deco/codemod-toolkit": "jsr:@deco/codemod-toolkit@0.3.4",
     "@deco/durable": "jsr:@deco/durable@0.5.3",
-    "@deco/warp": "jsr:@deco/warp@0.3.8",
+    "@deco/warp": "jsr:@deco/warp@0.3.10",
     "@hono/hono": "jsr:@hono/hono@^4.5.4",
     "@std/assert": "jsr:@std/assert@^1.0.2",
     "@std/async": "jsr:@std/async@^0.224.1",
@@ -29,15 +29,15 @@
     "@zaubrik/djwt": "jsr:@zaubrik/djwt@^3.0.2",
     "fast-json-patch": "npm:fast-json-patch@^3.1.1",
     "https://esm.sh/*preact-render-to-string@6.3.1": "npm:preact-render-to-string@6.4.2",
-    "@deco/deco": "jsr:@deco/deco@1.116.0",
+    "@deco/deco": "jsr:@deco/deco@1.131.2",
     "simple-git": "npm:simple-git@^3.25.0",
     "std/": "https://deno.land/std@0.190.0/",
-    "deco/": "https://cdn.jsdelivr.net/gh/deco-cx/deco@1.116.0/",
-    "apps/": "https://cdn.jsdelivr.net/gh/deco-cx/apps@0.82.2/",
+    "deco/": "https://cdn.jsdelivr.net/gh/deco-cx/deco@1.131.2/",
+    "apps/": "https://raw.githubusercontent.com/deco-cx/apps/122c45c7d76b7859aa8336104c316b1b106607f2/",
     "@preact/signals": "https://esm.sh/*@preact/signals@1.2.2",
     "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.5.1",
     "daisyui": "npm:daisyui@4.6.0",
-    "@deco/dev": "jsr:@deco/dev@1.116.0",
+    "@deco/dev": "jsr:@deco/dev@1.131.2",
     "site/": "./"
   },
   "tasks": {
