--- a/deno.json
+++ b/deno.json
@@ -29,15 +29,15 @@
     "@zaubrik/djwt": "jsr:@zaubrik/djwt@^3.0.2",
     "fast-json-patch": "npm:fast-json-patch@^3.1.1",
     "https://esm.sh/*preact-render-to-string@6.3.1": "npm:preact-render-to-string@6.4.2",
-    "@deco/deco": "jsr:@deco/deco@1.131.2",
+    "@deco/deco": "jsr:@deco/deco@1.132.0",
     "simple-git": "npm:simple-git@^3.25.0",
     "std/": "https://deno.land/std@0.190.0/",
-    "deco/": "https://cdn.jsdelivr.net/gh/deco-cx/deco@1.131.2/",
-    "apps/": "https://raw.githubusercontent.com/deco-cx/apps/1f803b829f511ce95d4134dcba2eef2654709cb7/",
+    "deco/": "https://cdn.jsdelivr.net/gh/deco-cx/deco@1.132.0/",
+    "apps/": "https://cdn.jsdelivr.net/gh/deco-cx/apps@0.133.10/",
     "@preact/signals": "https://esm.sh/*@preact/signals@1.2.2",
     "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.5.1",
     "daisyui": "npm:daisyui@4.6.0",
-    "@deco/dev": "jsr:@deco/dev@1.131.2",
+    "@deco/dev": "jsr:@deco/dev@1.132.0",
     "site/": "./"
   },
   "tasks": {
